<resources>

    <!-- APP GENERAL -->
    <string name="app_name">ServeSync</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- LOGIN SCREEN -->
    <string name="login_welcome">Welcome!</string>
    <string name="login_subtitle">Sign in to access your account.</string>
    <string name="login_title">LOGIN</string>
    <string name="login_id_number">ID Number</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_button">SIGN IN</string>
    <string name="login_register">Not a member? Register now</string>

    <!-- REGISTRATION SCREEN -->
    <string name="register_title">REGISTER</string>
    <string name="register_subtitle">Create an Account.</string>
    <string name="register_email">Email</string>
    <string name="register_first_name">First Name</string>
    <string name="register_middle_initial">M.I.</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_id_number">ID Number</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_button">SIGN UP</string>
    <string name="register_next_button">NEXT</string>
    <string name="register_login">Already have an Account?</string>

    <!-- ADDITIONAL REGISTRATION DETAILS -->
    <string name="register_course_year">Course-Year</string>
    <string name="register_dob">Date of Birth</string>
    <string name="register_home_address">Home Address</string>
    <string name="register_city_address">City Address</string>
    <string name="register_contact_number">Contact # (+63)</string>
    <string name="register_gender">Gender</string>

    <!-- SIDEBAR -->
    <string name="sidebar_face_register">Face Register</string>
    <string name="sidebar_notification">Notification</string>
    <string name="sidebar_about">About</string>
    <string name="sidebar_logout">Logout</string>

    <!-- NAVBAR -->
    <string name="navbar_home">HOME</string>
    <string name="navbar_room">ROOM</string>
    <string name="navbar_report">REPORT</string>
    <string name="navbar_event">EVENT</string>

    <!-- CAMERA START UP! -->
    <string name="camera_instruction">Align your face to the center.</string>

    <!-- DROPDOWN OPTIONS -->
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
