<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home_icon"
        android:title="@string/navbar_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/room"
        android:icon="@drawable/room_icon"
        android:title="@string/navbar_room"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/report"
        android:icon="@drawable/report_icon"
        android:title="@string/navbar_report"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/event"
        android:icon="@drawable/event_icon"
        android:title="@string/navbar_event"
        app:showAsAction="ifRoom" />

</menu>
