<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/login_title"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_welcome"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/subtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_subtitle"
            android:textSize="14sp"
            android:textColor="@color/dark_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="488dp"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:background="@drawable/card_background"
            android:elevation="4dp">

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_title"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/idNumberField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/login_id_number"
                android:layout_marginTop="16dp"
                android:minHeight="48dp"
                android:padding="12dp"
                android:hint="@string/login_id_number"
                android:inputType="text"
                android:background="@drawable/edit_text_background"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/login_password"
                android:minHeight="48dp"
                android:padding="12dp"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_background" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="end"
                android:text="@string/login_forgot_password"
                android:textSize="12sp"
                android:textColor="@color/dark_gray" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/gold"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/login_button"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_register"
            android:textSize="14sp"
            android:textColor="@color/black" />

    </LinearLayout>

</ScrollView>
