<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="488dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="@string/register_email"
            android:hint="@string/register_email"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/gray">

            <EditText
                android:id="@+id/firstNameField"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginEnd="5dp"
                android:autofillHints="@string/register_first_name"
                android:background="@drawable/edit_text_background"
                android:hint="@string/register_first_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/middleNameField"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:hint="@string/register_middle_initial"
                android:inputType="textCapCharacters" />

            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/edit_text_background"
                android:autofillHints="@string/register_last_name"
                android:hint="@string/register_last_name"
                android:inputType="text" />

        </LinearLayout>

        <EditText
            android:id="@+id/idNumberField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/register_id_number"
            android:hint="@string/register_id_number"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_background"
            android:inputType="text"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/register_password"
            android:background="@drawable/edit_text_background"
            android:hint="@string/register_password"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmPasswordField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/register_confirm_password"
            android:hint="@string/register_confirm_password"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textPassword" />

    </LinearLayout>

</FrameLayout>